# code-knowledge

./: .gitignore  IMPLEMENTATION_SUMMARY.md  OFFLINE_MODEL.md  OUTPUT_DIRECTORY.md  QUERY_RELATIONSHIPS.md  README.md  UV_CONVERSION.md  UV_GUIDE.md  download-model.ps1  download-model.sh  pyproject.toml  setup-uv.ps1  setup-uv.sh
app/: __init__.py  __main__.py  build.py  cache.py  cluster.py  detect.py  export.py  security.py  vector.py
spec/: design-0.1.0.md  requirements-0.1.0.md
